y.output
   0  $accept : PROGRAM $end

   1  $$1 :

   2  $$2 :

   3  PROGRAM : ID $$1 block $$2 '.'

   4  block : type_dec_list YYBEGIN r_stmt_list END ID

   5  type_dec_list :
   6                | type_dec
   7                | type_dec_list ',' type_dec

   8  $$3 :

   9  type_dec : var_dec_list ':' ID $$3 var_dec IS ID

  10  var_dec_list : var_dec
  11               | var_dec_list ',' var_dec

  12  var_dec : ID

  13  r_stmt_list : stmt_list

  14  stmt_list : stmt_list stmt

  15  stmt : var ASSIGN expr
  16       | IF expr THEN r_stmt_list elif_clause_list else_clause
  17       | WHILE expr DO r_stmt_list
  18       | REPEAT r_stmt_list UNTIL expr
  19       | RETURN expr
  20       | RETURN

  21  elif_clause_list :
  22                   | elif_clause_list elif_clause

  23  elif_clause : ELIF expr THEN r_stmt_list

  24  else_clause :
  25              | ELSE r_stmt_list

  26  expr : expr '+' expr
  27       | expr '-' expr
  28       | '-' expr
  29       | expr MUL_OP expr
  30       | expr REL_OP expr
  31       | '(' expr ')'
  32       | var
  33       | STRING
  34       | int_const

  35  int_const : NUMBER

  36  var : ID
  37      | ID '[' NUMBER ']'

state 0
	$accept : . PROGRAM $end  (0)

	ID  shift 1
	.  error

	PROGRAM  goto 2


state 1
	PROGRAM : ID . $$1 block $$2 '.'  (3)
	$$1 : .  (1)

	.  reduce 1

	$$1  goto 3


state 2
	$accept : PROGRAM . $end  (0)

	$end  accept


state 3
	PROGRAM : ID $$1 . block $$2 '.'  (3)
	type_dec_list : .  (5)

	ID  shift 4
	YYBEGIN  reduce 5
	','  reduce 5

	block  goto 5
	var_dec  goto 6
	var_dec_list  goto 7
	type_dec  goto 8
	type_dec_list  goto 9


state 4
	var_dec : ID .  (12)

	.  reduce 12


state 5
	PROGRAM : ID $$1 block . $$2 '.'  (3)
	$$2 : .  (2)

	.  reduce 2

	$$2  goto 10


state 6
	var_dec_list : var_dec .  (10)

	.  reduce 10


state 7
	type_dec : var_dec_list . ':' ID $$3 var_dec IS ID  (9)
	var_dec_list : var_dec_list . ',' var_dec  (11)

	','  shift 11
	':'  shift 12
	.  error


state 8
	type_dec_list : type_dec .  (6)

	.  reduce 6


state 9
	block : type_dec_list . YYBEGIN r_stmt_list END ID  (4)
	type_dec_list : type_dec_list . ',' type_dec  (7)

	YYBEGIN  shift 13
	','  shift 14
	.  error


state 10
	PROGRAM : ID $$1 block $$2 . '.'  (3)

	'.'  shift 15
	.  error


state 11
	var_dec_list : var_dec_list ',' . var_dec  (11)

	ID  shift 4
	.  error

	var_dec  goto 16


state 12
	type_dec : var_dec_list ':' . ID $$3 var_dec IS ID  (9)

	ID  shift 17
	.  error


state 13
	block : type_dec_list YYBEGIN . r_stmt_list END ID  (4)


	stmt_list  goto 18
	r_stmt_list  goto 19


state 14
	type_dec_list : type_dec_list ',' . type_dec  (7)

	ID  shift 4
	.  error

	var_dec  goto 6
	var_dec_list  goto 7
	type_dec  goto 20


state 15
	PROGRAM : ID $$1 block $$2 '.' .  (3)

	.  reduce 3


state 16
	var_dec_list : var_dec_list ',' var_dec .  (11)

	.  reduce 11


state 17
	type_dec : var_dec_list ':' ID . $$3 var_dec IS ID  (9)
	$$3 : .  (8)

	.  reduce 8

	$$3  goto 21


state 18
	r_stmt_list : stmt_list .  (13)
	stmt_list : stmt_list . stmt  (14)

	IF  shift 22
	WHILE  shift 23
	REPEAT  shift 24
	RETURN  shift 25
	ID  shift 26
	END  reduce 13
	ELSE  reduce 13
	ELIF  reduce 13
	UNTIL  reduce 13

	stmt  goto 27
	var  goto 28


state 19
	block : type_dec_list YYBEGIN r_stmt_list . END ID  (4)

	END  shift 29
	.  error


state 20
	type_dec_list : type_dec_list ',' type_dec .  (7)

	.  reduce 7


state 21
	type_dec : var_dec_list ':' ID $$3 . var_dec IS ID  (9)

	ID  shift 4
	.  error

	var_dec  goto 30


state 22
	stmt : IF . expr THEN r_stmt_list elif_clause_list else_clause  (16)

	ID  shift 26
	NUMBER  shift 31
	STRING  shift 32
	'-'  shift 33
	'('  shift 34
	.  error

	expr  goto 35
	int_const  goto 36
	var  goto 37


state 23
	stmt : WHILE . expr DO r_stmt_list  (17)

	ID  shift 26
	NUMBER  shift 31
	STRING  shift 32
	'-'  shift 33
	'('  shift 34
	.  error

	expr  goto 38
	int_const  goto 36
	var  goto 37


state 24
	stmt : REPEAT . r_stmt_list UNTIL expr  (18)


	stmt_list  goto 18
	r_stmt_list  goto 39


state 25
	stmt : RETURN . expr  (19)
	stmt : RETURN .  (20)

	ID  shift 26
	NUMBER  shift 31
	STRING  shift 32
	'-'  shift 33
	'('  shift 34
	IF  reduce 20
	END  reduce 20
	ELSE  reduce 20
	WHILE  reduce 20
	ELIF  reduce 20
	UNTIL  reduce 20
	REPEAT  reduce 20
	RETURN  reduce 20

	expr  goto 40
	int_const  goto 36
	var  goto 37


state 26
	var : ID .  (36)
	var : ID . '[' NUMBER ']'  (37)

	'['  shift 41
	DO  reduce 36
	IF  reduce 36
	END  reduce 36
	ELSE  reduce 36
	THEN  reduce 36
	WHILE  reduce 36
	ELIF  reduce 36
	UNTIL  reduce 36
	REPEAT  reduce 36
	RETURN  reduce 36
	ID  reduce 36
	ASSIGN  reduce 36
	REL_OP  reduce 36
	'+'  reduce 36
	'-'  reduce 36
	MUL_OP  reduce 36
	')'  reduce 36


state 27
	stmt_list : stmt_list stmt .  (14)

	.  reduce 14


state 28
	stmt : var . ASSIGN expr  (15)

	ASSIGN  shift 42
	.  error


state 29
	block : type_dec_list YYBEGIN r_stmt_list END . ID  (4)

	ID  shift 43
	.  error


state 30
	type_dec : var_dec_list ':' ID $$3 var_dec . IS ID  (9)

	IS  shift 44
	.  error


state 31
	int_const : NUMBER .  (35)

	.  reduce 35


state 32
	expr : STRING .  (33)

	.  reduce 33


state 33
	expr : '-' . expr  (28)

	ID  shift 26
	NUMBER  shift 31
	STRING  shift 32
	'-'  shift 33
	'('  shift 34
	.  error

	expr  goto 45
	int_const  goto 36
	var  goto 37


state 34
	expr : '(' . expr ')'  (31)

	ID  shift 26
	NUMBER  shift 31
	STRING  shift 32
	'-'  shift 33
	'('  shift 34
	.  error

	expr  goto 46
	int_const  goto 36
	var  goto 37


state 35
	stmt : IF expr . THEN r_stmt_list elif_clause_list else_clause  (16)
	expr : expr . '+' expr  (26)
	expr : expr . '-' expr  (27)
	expr : expr . MUL_OP expr  (29)
	expr : expr . REL_OP expr  (30)

	THEN  shift 47
	REL_OP  shift 48
	'+'  shift 49
	'-'  shift 50
	MUL_OP  shift 51
	.  error


state 36
	expr : int_const .  (34)

	.  reduce 34


state 37
	expr : var .  (32)

	.  reduce 32


state 38
	stmt : WHILE expr . DO r_stmt_list  (17)
	expr : expr . '+' expr  (26)
	expr : expr . '-' expr  (27)
	expr : expr . MUL_OP expr  (29)
	expr : expr . REL_OP expr  (30)

	DO  shift 52
	REL_OP  shift 48
	'+'  shift 49
	'-'  shift 50
	MUL_OP  shift 51
	.  error


state 39
	stmt : REPEAT r_stmt_list . UNTIL expr  (18)

	UNTIL  shift 53
	.  error


state 40
	stmt : RETURN expr .  (19)
	expr : expr . '+' expr  (26)
	expr : expr . '-' expr  (27)
	expr : expr . MUL_OP expr  (29)
	expr : expr . REL_OP expr  (30)

	REL_OP  shift 48
	'+'  shift 49
	'-'  shift 50
	MUL_OP  shift 51
	IF  reduce 19
	END  reduce 19
	ELSE  reduce 19
	WHILE  reduce 19
	ELIF  reduce 19
	UNTIL  reduce 19
	REPEAT  reduce 19
	RETURN  reduce 19
	ID  reduce 19


state 41
	var : ID '[' . NUMBER ']'  (37)

	NUMBER  shift 54
	.  error


state 42
	stmt : var ASSIGN . expr  (15)

	ID  shift 26
	NUMBER  shift 31
	STRING  shift 32
	'-'  shift 33
	'('  shift 34
	.  error

	expr  goto 55
	int_const  goto 36
	var  goto 37


state 43
	block : type_dec_list YYBEGIN r_stmt_list END ID .  (4)

	.  reduce 4


state 44
	type_dec : var_dec_list ':' ID $$3 var_dec IS . ID  (9)

	ID  shift 56
	.  error


state 45
	expr : expr . '+' expr  (26)
	expr : expr . '-' expr  (27)
	expr : '-' expr .  (28)
	expr : expr . MUL_OP expr  (29)
	expr : expr . REL_OP expr  (30)

	.  reduce 28


state 46
	expr : expr . '+' expr  (26)
	expr : expr . '-' expr  (27)
	expr : expr . MUL_OP expr  (29)
	expr : expr . REL_OP expr  (30)
	expr : '(' expr . ')'  (31)

	REL_OP  shift 48
	'+'  shift 49
	'-'  shift 50
	MUL_OP  shift 51
	')'  shift 57
	.  error


state 47
	stmt : IF expr THEN . r_stmt_list elif_clause_list else_clause  (16)


	stmt_list  goto 18
	r_stmt_list  goto 58


state 48
	expr : expr REL_OP . expr  (30)

	ID  shift 26
	NUMBER  shift 31
	STRING  shift 32
	'-'  shift 33
	'('  shift 34
	.  error

	expr  goto 59
	int_const  goto 36
	var  goto 37


state 49
	expr : expr '+' . expr  (26)

	ID  shift 26
	NUMBER  shift 31
	STRING  shift 32
	'-'  shift 33
	'('  shift 34
	.  error

	expr  goto 60
	int_const  goto 36
	var  goto 37


state 50
	expr : expr '-' . expr  (27)

	ID  shift 26
	NUMBER  shift 31
	STRING  shift 32
	'-'  shift 33
	'('  shift 34
	.  error

	expr  goto 61
	int_const  goto 36
	var  goto 37


state 51
	expr : expr MUL_OP . expr  (29)

	ID  shift 26
	NUMBER  shift 31
	STRING  shift 32
	'-'  shift 33
	'('  shift 34
	.  error

	expr  goto 62
	int_const  goto 36
	var  goto 37


state 52
	stmt : WHILE expr DO . r_stmt_list  (17)


	stmt_list  goto 18
	r_stmt_list  goto 63


state 53
	stmt : REPEAT r_stmt_list UNTIL . expr  (18)

	ID  shift 26
	NUMBER  shift 31
	STRING  shift 32
	'-'  shift 33
	'('  shift 34
	.  error

	expr  goto 64
	int_const  goto 36
	var  goto 37


state 54
	var : ID '[' NUMBER . ']'  (37)

	']'  shift 65
	.  error


state 55
	stmt : var ASSIGN expr .  (15)
	expr : expr . '+' expr  (26)
	expr : expr . '-' expr  (27)
	expr : expr . MUL_OP expr  (29)
	expr : expr . REL_OP expr  (30)

	REL_OP  shift 48
	'+'  shift 49
	'-'  shift 50
	MUL_OP  shift 51
	IF  reduce 15
	END  reduce 15
	ELSE  reduce 15
	WHILE  reduce 15
	ELIF  reduce 15
	UNTIL  reduce 15
	REPEAT  reduce 15
	RETURN  reduce 15
	ID  reduce 15


state 56
	type_dec : var_dec_list ':' ID $$3 var_dec IS ID .  (9)

	.  reduce 9


state 57
	expr : '(' expr ')' .  (31)

	.  reduce 31


state 58
	stmt : IF expr THEN r_stmt_list . elif_clause_list else_clause  (16)
	elif_clause_list : .  (21)

	.  reduce 21

	elif_clause_list  goto 66


state 59
	expr : expr . '+' expr  (26)
	expr : expr . '-' expr  (27)
	expr : expr . MUL_OP expr  (29)
	expr : expr . REL_OP expr  (30)
	expr : expr REL_OP expr .  (30)

	'+'  shift 49
	'-'  shift 50
	MUL_OP  shift 51
	DO  reduce 30
	IF  reduce 30
	END  reduce 30
	ELSE  reduce 30
	THEN  reduce 30
	WHILE  reduce 30
	ELIF  reduce 30
	UNTIL  reduce 30
	REPEAT  reduce 30
	RETURN  reduce 30
	ID  reduce 30
	')'  reduce 30


state 60
	expr : expr . '+' expr  (26)
	expr : expr '+' expr .  (26)
	expr : expr . '-' expr  (27)
	expr : expr . MUL_OP expr  (29)
	expr : expr . REL_OP expr  (30)

	MUL_OP  shift 51
	DO  reduce 26
	IF  reduce 26
	END  reduce 26
	ELSE  reduce 26
	THEN  reduce 26
	WHILE  reduce 26
	ELIF  reduce 26
	UNTIL  reduce 26
	REPEAT  reduce 26
	RETURN  reduce 26
	ID  reduce 26
	REL_OP  reduce 26
	'+'  reduce 26
	'-'  reduce 26
	')'  reduce 26


state 61
	expr : expr . '+' expr  (26)
	expr : expr . '-' expr  (27)
	expr : expr '-' expr .  (27)
	expr : expr . MUL_OP expr  (29)
	expr : expr . REL_OP expr  (30)

	MUL_OP  shift 51
	DO  reduce 27
	IF  reduce 27
	END  reduce 27
	ELSE  reduce 27
	THEN  reduce 27
	WHILE  reduce 27
	ELIF  reduce 27
	UNTIL  reduce 27
	REPEAT  reduce 27
	RETURN  reduce 27
	ID  reduce 27
	REL_OP  reduce 27
	'+'  reduce 27
	'-'  reduce 27
	')'  reduce 27


state 62
	expr : expr . '+' expr  (26)
	expr : expr . '-' expr  (27)
	expr : expr . MUL_OP expr  (29)
	expr : expr MUL_OP expr .  (29)
	expr : expr . REL_OP expr  (30)

	.  reduce 29


state 63
	stmt : WHILE expr DO r_stmt_list .  (17)

	.  reduce 17


state 64
	stmt : REPEAT r_stmt_list UNTIL expr .  (18)
	expr : expr . '+' expr  (26)
	expr : expr . '-' expr  (27)
	expr : expr . MUL_OP expr  (29)
	expr : expr . REL_OP expr  (30)

	REL_OP  shift 48
	'+'  shift 49
	'-'  shift 50
	MUL_OP  shift 51
	IF  reduce 18
	END  reduce 18
	ELSE  reduce 18
	WHILE  reduce 18
	ELIF  reduce 18
	UNTIL  reduce 18
	REPEAT  reduce 18
	RETURN  reduce 18
	ID  reduce 18


state 65
	var : ID '[' NUMBER ']' .  (37)

	.  reduce 37


state 66
	stmt : IF expr THEN r_stmt_list elif_clause_list . else_clause  (16)
	elif_clause_list : elif_clause_list . elif_clause  (22)
	else_clause : .  (24)

	ELSE  shift 67
	ELIF  shift 68
	IF  reduce 24
	END  reduce 24
	WHILE  reduce 24
	UNTIL  reduce 24
	REPEAT  reduce 24
	RETURN  reduce 24
	ID  reduce 24

	elif_clause  goto 69
	else_clause  goto 70


state 67
	else_clause : ELSE . r_stmt_list  (25)


	stmt_list  goto 18
	r_stmt_list  goto 71


state 68
	elif_clause : ELIF . expr THEN r_stmt_list  (23)

	ID  shift 26
	NUMBER  shift 31
	STRING  shift 32
	'-'  shift 33
	'('  shift 34
	.  error

	expr  goto 72
	int_const  goto 36
	var  goto 37


state 69
	elif_clause_list : elif_clause_list elif_clause .  (22)

	.  reduce 22


state 70
	stmt : IF expr THEN r_stmt_list elif_clause_list else_clause .  (16)

	.  reduce 16


state 71
	else_clause : ELSE r_stmt_list .  (25)

	.  reduce 25


state 72
	elif_clause : ELIF expr . THEN r_stmt_list  (23)
	expr : expr . '+' expr  (26)
	expr : expr . '-' expr  (27)
	expr : expr . MUL_OP expr  (29)
	expr : expr . REL_OP expr  (30)

	THEN  shift 73
	REL_OP  shift 48
	'+'  shift 49
	'-'  shift 50
	MUL_OP  shift 51
	.  error


state 73
	elif_clause : ELIF expr THEN . r_stmt_list  (23)


	stmt_list  goto 18
	r_stmt_list  goto 74


state 74
	elif_clause : ELIF expr THEN r_stmt_list .  (23)

	.  reduce 23


43 terminals, 19 nonterminals
38 grammar rules, 75 states

grammar parser grammar
symbol# value# symbol
     0      0  $end
     1    256  error
     2    257  DO
     3    258  IF
     4    259  IS
     5    260  OF
     6    261  OR
     7    262  AND
     8    263  END
     9    264  NOT
    10    265  ELSE
    11    266  THEN
    12    267  TYPE
    13    268  YYBEGIN
    14    269  WHILE
    15    270  ARRAY
    16    271  ELIF
    17    272  UNTIL
    18    273  VALUE
    19    274  REPEAT
    20    275  RETURN
    21    276  VARIABLE
    22    277  FUNCTION
    23    278  PROCEDURE
    24    279  ID
    25    280  NUMBER
    26    281  STRING
    27    282  STMT
    28    283  ASSIGN
    29     61  '='
    30    284  REL_OP
    31     43  '+'
    32     45  '-'
    33    285  MUL_OP
    34    286  UMINUS
    35    287  aparam_list
    36     46  '.'
    37     44  ','
    38     58  ':'
    39     40  '('
    40     41  ')'
    41     91  '['
    42     93  ']'
    43    288  $accept
    44    289  PROGRAM
    45    290  block
    46    291  stmt_list
    47    292  stmt
    48    293  elif_clause_list
    49    294  elif_clause
    50    295  else_clause
    51    296  expr
    52    297  r_stmt_list
    53    298  int_const
    54    299  var_dec
    55    300  var
    56    301  var_dec_list
    57    302  type_dec
    58    303  type_dec_list
    59    304  $$1
    60    305  $$2
    61    306  $$3
